--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Khu Du Lịch Sinh Thái Duckanh</title>
   <meta name="description" content="Trải nghiệm du lịch sinh thái, hòa mình vào thiên nhiên xanh mát, khám phá và bảo tồn cùng Khu Du Lịch Sinh Thái Xanh.">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -58,3 +58,4 @@
   </footer>
 </body>
 </html>
+
