--- a/bao-ton.html
+++ b/bao-ton.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bảo tồn & Giáo dục - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/bao-ton.css">
+  <link rel="stylesheet" href="bao-ton.css">
 </head>
 <body>
   <header>
@@ -30,3 +30,4 @@
 
 </body>
 </html>
+
