--- a/dang-ky.html
+++ b/dang-ky.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Đăng ký - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/dang-ky.css">
+  <link rel="stylesheet" href="dang-ky.css">
 </head>
 <body>
   <header>
@@ -29,3 +29,4 @@
   
 </body>
 </html>
+
