--- a/dat-ve.html
+++ b/dat-ve.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Đặt vé - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/dat-ve.css">
+  <link rel="stylesheet" href="dat-ve.css">
 </head>
 <body>
   <header>
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
