--- a/dia-diem.html
+++ b/dia-diem.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Địa điểm du lịch - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/dia-diem.css">
+  <link rel="stylesheet" href="dia-diem.css">
 </head>
 <body>
   <header>
@@ -40,3 +40,4 @@
   
 </body>
 </html>
+
