--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Giới thiệu - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/gioi-thieu.css">
+  <link rel="stylesheet" href="gioi-thieu.css">
 </head>
 <body>
   <header>
@@ -35,3 +35,4 @@
 </section>
 </body>
 </html>
+
