--- a/hoat-dong.html
+++ b/hoat-dong.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hoạt động - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/hoat-dong.css">
+  <link rel="stylesheet" href="hoat-dong.css">
 </head>
 <body>
   <header>
@@ -29,3 +29,4 @@
   </main>
 </body>
 </html>
+
