--- a/lien-he.html
+++ b/lien-he.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Liên hệ - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/lien-he.css">
+  <link rel="stylesheet" href="lien-he.css">
 </head>
 <body>
   <header>
@@ -42,3 +42,4 @@
   </footer>
 </body>
 </html>
+
