--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Tin tức - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/tin-tuc.css">
+  <link rel="stylesheet" href="tin-tuc.css">
 </head>
 <body>
   <header>
@@ -31,3 +31,4 @@
   
 </body>
 </html>
+
