--- a/uu-dai.html
+++ b/uu-dai.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ưu đãi - Khu Du Lịch Sinh Thái Xanh</title>
-  <link rel="stylesheet" href="css/uu-dai.css">
+  <link rel="stylesheet" href="uu-dai.css">
 </head>
 <body>
   <header>
@@ -22,3 +22,4 @@
   
 </body>
 </html>
+
